[gd_scene load_steps=3 format=3 uid="uid://bsesf57mrancm"]

[ext_resource type="Script" path="res://Langdocs/prog_82a.gd" id="1_a5mp0"]
[ext_resource type="Theme" uid="uid://b0cs0qqc6nrp7" path="res://Big_font.tres" id="1_y34rk"]

[node name="prog82a" type="Node2D"]
script = ExtResource("1_a5mp0")

[node name="Button" type="Button" parent="."]
offset_left = 43.0
offset_top = 220.0
offset_right = 139.0
offset_bottom = 272.0
theme = ExtResource("1_y34rk")
text = "Calc"

[node name="Button2" type="Button" parent="."]
offset_left = 174.0
offset_top = 221.0
offset_right = 270.0
offset_bottom = 273.0
theme = ExtResource("1_y34rk")
text = "Clear"

[node name="Button3" type="Button" parent="."]
offset_left = 309.0
offset_top = 220.0
offset_right = 405.0
offset_bottom = 272.0
theme = ExtResource("1_y34rk")
text = "Exit"

[node name="Label" type="Label" parent="."]
offset_left = 57.0
offset_top = 16.0
offset_right = 342.0
offset_bottom = 114.0
text = "Enter speed limit:
Enter speed:
Speeding ticket: "

[node name="ticketworth" type="Label" parent="."]
offset_left = 196.0
offset_top = 71.0
offset_right = 264.0
offset_bottom = 94.0

[node name="txtLim" type="LineEdit" parent="."]
offset_left = 197.0
offset_top = 9.0
offset_right = 264.063
offset_bottom = 40.0

[node name="txtSpd" type="LineEdit" parent="."]
offset_left = 156.0
offset_top = 41.0
offset_right = 223.063
offset_bottom = 72.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
